// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div>
  <p
    class="emotion-0"
    data-test-id="cf-ui-text"
  >
    Text
  </p>
</div>
`;

exports[`renders the component h3 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div>
  <h3
    class="emotion-0"
    data-test-id="cf-ui-text"
  >
    Text
  </h3>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-weight: 400;
  color: #536171;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div>
  <p
    class="my-extra-class emotion-0"
    data-test-id="cf-ui-text"
  >
    Text
  </p>
</div>
`;
